# sparsecity

./: dataset_transform.py  distil_train.py  kernel_test_2.py  msmarco_eval.py  pyproject.toml  setup_env.sh  splade_train.py
conf/: cocondenser_base.yaml  distilbert_base.yaml  modernbert_base.yaml  mosaic_base.yaml  mosaic_distil.yaml  neo_base.yaml  neo_distil.yaml  nomic_base.yaml  profile.yaml
conf/model/: cocondenser.yaml  modernbert.yaml  mosaic.yaml  mosaic_1024.yaml  neo.yaml  nomic.yaml
src/sparsecity/data/: dataset.py
src/sparsecity/evaluation/: st_wrapper.py  validate.py
src/sparsecity/models/splade_models/: memory_efficient.py  model_registry.py  splade.py
src/sparsecity/training/: grad_cache.py  losses.py  sparse_trainer.py  trainer.py
src/sparsecity/utils/: utils.py
